--- a/src/index.scss
+++ b/src/index.scss
@@ -20,4 +20,8 @@ input,button{
     outline:none;
     font:inherit;
 }
-
+.clearfix:after{
+    content:'';
+    display:block;
+    clear:both;
+}
